# skabm

./: .gitignore  .pre-commit-config.yaml  README.md  calibration.py  eurostat_loader.py  pyproject.toml  test_calibration.py
.claude/: CLAUDE.md  settings.local.json
.claude/skills/maplib/: SKILL.md
.github/workflows/: ci.yml
examples/: poledna_maplib_demo.py
skabm/: __init__.py  calibration.py  rules.py  simulation.py
skabm/datasets/: __init__.py  eurostat_loader.py
tests/: test_pipeline.py  test_poledna_calibration.py  test_simulation.py
