[project]
name = 'skabm'
dynamic = ["version"]
dependencies = [
    "eurostat>=1.1.1",
    "httpx>=0.28.1",
    "maplib>=0.20.19",
    "numpy>=2.4.6",
    "polars>=1.42.1",
    "polars-random>=0.4.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["skabm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ipython>=9.15.0",
    "prek>=0.4.6",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
